fix collapsing visualizer issue in Safari

--- a/src/domain/Visualizer.css
+++ b/src/domain/Visualizer.css
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%; /* Safari needs this to calculate the height of its child */
 
   & > .scalerBase {
     width: 50%;
